[package]
name = "lrc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofty = "0.19"
walkdir = "2"
urlencoding = "2"
futures = "0.3"
